# libjieba-c

./: .gitignore  CMakeLists.txt  LICENSE  azure-pipelines.yml  build-debian.yml  build-unix.yml  demo.c  gen-nupkg.ps1  gen-toolchain.sh  libjieba-c.nuspec.template  libjieba-c.vcxproj
ci/: build-dockcross.yml  build-windows.yml
include/: libjieba.h
src/: libjieba.cpp
